<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/root_fav"
        android:background="@color/pub_text_color_primary_light"
        android:layout_height="match_parent"
        tools:context=".ui.edit.favourites.FavPostActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                app:theme="@style/ThemeToolbar"
                android:id="@+id/toolbar_fav"
                android:background="@color/colorAccent"
                app:title="Manage your favourite"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_weight="1"
                android:id="@+id/list_fav_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <FrameLayout
                android:id="@+id/container_multiselect"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="55dp">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_multi_delete"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center"
                    android:text="delete selected"
                    app:icon="@drawable/ic_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </FrameLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.coordinatorlayout.widget.CoordinatorLayout>