<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_followers"
        tools:context=".ui.edit.followers.FollowersActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/background"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                app:theme="@style/ThemeToolbar"
                android:id="@+id/toolbar_followers"
                android:background="@color/colorAccent"
                app:title="Manage your followers"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:weightSum="1"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_following"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center"
                    android:text="Following"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_followers"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center"
                    android:text="Followers"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/container_followedBy"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_follower_count"
                    android:padding="8dp"
                    android:text="You are followed By"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_followers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/container_following"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:padding="8dp"
                    android:id="@+id/text_following_count"
                    android:text="You are following"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_following"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>