<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root_settings"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                app:theme="@style/ThemeToolbar"
                android:id="@+id/toolbar_settings"
                android:background="@color/colorAccent"
                app:title="Settings"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <FrameLayout
                android:paddingTop="@dimen/module_2"
                android:paddingBottom="@dimen/module_1"
                android:paddingStart="@dimen/module_2"
                android:paddingEnd="@dimen/module_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_marginTop="@dimen/module_0_5"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="Visible to location Search"
                        android:textSize="@dimen/font_body_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="Your profile will be visible in location search results"
                        android:textSize="@dimen/font_caption_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_location_search"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/module_0_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </FrameLayout>

        <FrameLayout
                android:paddingTop="@dimen/module_2"
                android:paddingBottom="@dimen/module_1"
                android:paddingStart="@dimen/module_2"
                android:paddingEnd="@dimen/module_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_marginTop="@dimen/module_0_5"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="Visible to Email Search"
                        android:textSize="@dimen/font_body_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="Your profile  will be visible in email search results"
                        android:textSize="@dimen/font_caption_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_email_search"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/module_0_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </FrameLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.coordinatorlayout.widget.CoordinatorLayout>