...
        android:id="@+id/root_home"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity">

    <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_container_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
...
                    app:menu="@menu/menu_bottom_nav_home"/>

        </FrameLayout>

        <com.google.android.material.navigation.NavigationView
                app:headerLayout="@layout/layout_home_side_nav_header"
                android:id="@+id/side_drawer_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:menu="@menu/menu_side_nav"/>

    </androidx.drawerlayout.widget.DrawerLayout>
...
